SAMZA-2625: Remove PrintGCDateStamp (Deprecated in JDK 11)